--- a/EMD/Views/Users/Create.cshtml
+++ b/EMD/Views/Users/Create.cshtml
@@ -47,6 +47,8 @@
 
             <form asp-action="Create" method="post" autocomplete="off">
                 <div class="p-4 border rounded">
+
+                    <input type="hidden" asp-for="StrUrl" />
                     <div asp-validation-summary="All" class="text-danger"></div>
 
                     <div class="form-group row">
@@ -57,7 +59,7 @@
                             <input class="form-control" asp-for="UsernameCreate" />
                             <span class="text-danger" asp-validation-for="UsernameCreate"></span>
                         </div>
-                        
+
 
                         <div class="col-2">
                             <label asp-for="User.Password"></label>
@@ -66,7 +68,7 @@
                             <input class="form-control" asp-for="User.Password" />
                             <span class="text-danger" asp-validation-for="User.Password"></span>
                         </div>
-                        
+
                     </div>
 
 
@@ -85,7 +87,7 @@
                             <input class="form-control" asp-for="User.Name" />
                             <span class="text-danger" asp-validation-for="User.Name"></span>
                         </div>
-                        
+
                     </div>
 
 
@@ -97,7 +99,7 @@
                             <input class="form-control" asp-for="User.PhongBan" />
                             <span class="text-danger" asp-validation-for="User.PhongBan"></span>
                         </div>
-                        
+
 
                         <div class="col-2">
                             <label asp-for="User.ChiNhanhId"></label>
@@ -116,7 +118,7 @@
                             <select asp-for="User.DMDaiLy" class="form-control ddlDMDaily"></select>
                             <span class="text-danger" asp-validation-for="User.DMDaiLy"></span>
                         </div>
-                        
+
 
                         <div class="col-2">
                             <label asp-for="User.Khoi"></label>
@@ -129,7 +131,7 @@
                             </select>
                             <span class="text-danger" asp-validation-for="User.Khoi"></span>
                         </div>
-                        
+
                     </div>
 
                     <div class="form-group row">
@@ -139,7 +141,7 @@
                         <div class="col-4">
                             <div class="icheck-primary">
                                 <input type="checkbox" asp-for="User.PhongBan" />
-                               
+
                             </div>
 
                             <span class="text-danger" asp-validation-for="User.TrangThai"></span>
