finish user fix

--- a/EMD/Views/Users/Create.cshtml
+++ b/EMD/Views/Users/Create.cshtml
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col-4">
                             <div class="icheck-primary">
-                                <input type="checkbox" asp-for="User.PhongBan" />
+                                <input type="checkbox" asp-for="User.TrangThai" />
 
                             </div>
 
