--- a/EMD/Views/EMDs/Edit.cshtml
+++ b/EMD/Views/EMDs/Edit.cshtml
@@ -50,6 +50,7 @@
                     <input type="hidden" asp-for="EMDTbl.Create" />
                     <input type="hidden" asp-for="EMDTbl.Tracking" />
                     <input type="hidden" asp-for="EMDTbl.CanTru" />
+                    <input type="hidden" asp-for="EMDTbl.DaHoanCoc" />
 
 
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
