--- a/EMD/Views/Shared/_Layout.cshtml
+++ b/EMD/Views/Shared/_Layout.cshtml
@@ -41,9 +41,9 @@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item d-none d-sm-inline-block">
+                @*<li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">Contact</a>
-                </li>
+                </li>*@
             </ul>
 
             <partial name="_LoginPartial.cshtml" />
@@ -72,9 +72,9 @@
 
         <footer class="main-footer">
             <div class="float-right d-none d-sm-block">
-                <b>Version</b> 3.0.0-rc.3
+                <b>Version</b> 1
             </div>
-            <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
+            <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">Saigontourist</a>.</strong> All rights
             reserved.
         </footer>
 
