--- a/EMD/Views/EMDs/Index.cshtml
+++ b/EMD/Views/EMDs/Index.cshtml
@@ -256,11 +256,11 @@
                                                 <span id="confirmDeleteSpan_@item.Id" style="display: none">
                                                     <span class="text-light">Xóa?</span>
                                                     <button type="submit" class="btn btn-danger">Yes</button>
-                                                    <a href="#" class="btn btn-primary" onclick="confirmDelete('@item.Id', false)">No</a>
+                                                    <button type="button" class="btn btn-primary" onclick="confirmDelete('@item.Id', false)">No</button>
                                                 </span>
 
                                                 <span id="deleteSpan_@item.Id">
-                                                    <a href="#" class="btn btn-danger btn-sm" onclick="confirmDelete('@item.Id', true)"><i class="fas fa-trash-alt"></i></a>
+                                                    <button type="button" class="btn btn-danger btn-sm" onclick="confirmDelete('@item.Id', true)"><i class="fas fa-trash-alt"></i></button>
                                                 </span>
                                             </form>
                                         </div>
